--- a/lab-06-sad-plots.Rmd
+++ b/lab-06-sad-plots.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "Lab 06 - Take a sad plot and make it better"
+author: "Riley A Moffat"
 output: 
   tufte::tufte_html:
     css: ../lab.css
