--- a/lab-06-sad-plots.Rmd
+++ b/lab-06-sad-plots.Rmd
@@ -126,7 +126,7 @@ staff_long
 And now let's plot is as a line plot.
 A possible approach for creating a line plot where we color the lines by faculty type is the following:
 
-```{r fig.width = 10, fig.fullwidth = TRUE}
+```{r fig.width = 10, fig.fullwidth = TRUE, eval=FALSE}
 staff_long %>%
   ggplot(aes(x = year, y = value, color = faculty_type)) +
   geom_line()
@@ -139,7 +139,13 @@ We can fix this using the `group` aesthetic following.
 ```{r fig.width = 10, fig.fullwidth = TRUE}
 staff_long %>%
   ggplot(aes(x = year, y = value, group = faculty_type, color = faculty_type)) +
-  geom_line()
+  geom_line() +
+  labs(
+    title = "Faculty Trend over Time (1975-2011)",
+    xlab = "",
+    ylab = ""
+  ) +
+  theme(legend.title = element_blank())
 ```
 
 1.  Include the line plot you made above in your report and make sure the figure width is large enough to make it legible.
@@ -147,8 +153,24 @@ staff_long %>%
 
 2.  Suppose the objective of this plot was to show that the proportion of part-time faculty have gone up over time compared to other instructional staff types.
     What changes would you propose making to this plot to tell this story and why.
+    
+***I would make the `part-time faculty` line one color and the rest another color so I can focus on that only variable.***
 
 3.  Implement the changes you proposed in the previous exercise.
+
+```{r fig.width = 10, fig.fullwidth = TRUE}
+staff_long %>%
+  ggplot(aes(x = year, y = value, group = faculty_type, color = faculty_type)) +
+  geom_line() +
+  labs(
+    title = "Faculty Trend over Time (1975-2011)",
+    subtitle = "Part-time faculty increase",
+    xlab = "",
+    ylab = ""
+  ) +
+  theme(legend.title = element_blank()) +
+  scale_color_manual(values = c(rep("gray", 4), "red"))
+```
 
 🧶 ✅ ⬆️ Knit, *commit, and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.*
 
