--- a/lab-06-sad-plots.Rmd
+++ b/lab-06-sad-plots.Rmd
@@ -192,12 +192,29 @@ knitr::include_graphics("img/fisheries.png")
 
 Load the data.
 
-```{r load-data-fisheries, eval = FALSE}
+```{r load-data-fisheries, eval = TRUE}
 fisheries <- read_csv("data/fisheries.csv")
 ```
 
 5.  Create a new data visualisation for these data that implements the improvements you proposed in the previous exercise (or many of them as you can).
 
+```{r}
+fisheries %>%
+  filter(total >= 1000000) %>%
+  mutate(country = fct_reorder(country, aquaculture, min)) %>%
+  arrange(total) %>%
+  select(-total) %>%
+  pivot_longer(cols = -country, names_to = "type") %>%
+  ggplot(aes(x = value, y = country, fill = type)) +
+  geom_bar(stat = "identity", position = "fill") +
+  scale_fill_manual(values = c("#c994c7", "#dd1c77")) +
+  theme(legend.title = element_blank()) +
+  theme(legend.position = "top") +
+  labs(title = "Fishing by Country",
+       xlab("Proportion"),
+       ylab("")
+  )
+```
 🧶 ✅ ⬆️ Knit, *commit, and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards and review the md document on GitHub to make sure you're happy with the final state of your work.*
 
 # Wrapping up
